# Pdf2txt

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: api.py  process_pdf.py
dev/: test.ipynb
frontend/: index.html
processed/: test1.txt  test2.txt
